Actions
Bug #12599
closedpic16f819: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../sun4u/io/i2c/clients/pic16f819.c: In function 'pic16f819_ioctl': ../../sun4u/io/i2c/clients/pic16f819.c:288: error: comparison between pointer and integer ../../sun4u/io/i2c/clients/pic16f819.c: In function 'pic16f819_do_attach': ../../sun4u/io/i2c/clients/pic16f819.c:392: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 111d63ac89d5f46c27a3de884ceaf358c6b4f3c7
commit 111d63ac89d5f46c27a3de884ceaf358c6b4f3c7 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-09T15:36:34.000Z 12599 pic16f819: NULL pointer errors Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions